--- a/src/pages/Popup/index.scss
+++ b/src/pages/Popup/index.scss
@@ -20,13 +20,20 @@
   }
 
   .setting-icon {
-    cursor: pointer;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    fill: rgba(44, 44, 44, 0.8);
+
+    &:hover {
+      fill: #2c2c2c;
+    }
   }
 }
 
 .logo-wrap {
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
   flex-shrink: 0;
   margin-right: 10px;
 
@@ -39,9 +46,8 @@
   .logo-icon {
     width: 100%;
     height: 100%;
-    background-size: 25px 25px;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-position: center bottom;
 
     &.success {
       background-image: url(../../assets/img/completed.png);
@@ -83,6 +89,12 @@
     padding-right: 12px;
     cursor: pointer;
     background: var(--divider_tertiary);
+
+    .down-icon {
+      width: 18px;
+      height: 18px;
+      fill: #2c2c2c;
+    }
   }
 
   .folder-select-list-wrap {
