--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -24,6 +24,7 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     // background-image: url(../../assets/img/back.png);
+    // background-image: url(https://cos.sankki.com/resource/nav-bg/yuanshen6.jpg);
   }
 }
 
