feat: 添加 theme-switch 组件

--- a/src/pages/Options/index.scss
+++ b/src/pages/Options/index.scss
@@ -2,7 +2,7 @@
 @import '../../styles/reset';
 @import '../../styles/variables';
 @import '../../styles/grid';
-@import '../../styles/layout';
+@import '../../styles/layout.scss';
 @import '../../styles/utilities';
 @import '../../styles/color.scss';
 
