--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,19 +1,21 @@
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 
-html, body {
-  ul, ol {
+html,
+body {
+  ul,
+  ol {
     padding: 0;
   }
 }
 
-li{
-  list-style:none
+li {
+  list-style: none;
 }
 
-img{
-  vertical-align:top;
-  border:none
+img {
+  vertical-align: top;
+  border: none;
 }
