--- a/src/pages/Options/components/TabsList/index.scss
+++ b/src/pages/Options/components/TabsList/index.scss
@@ -1,3 +1,22 @@
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  // 折叠板header区域[expandIconPosition="right"]间距
+  .ant-collapse-icon-position-right
+    > .ant-collapse-item
+    > .ant-collapse-header {
+    padding: 12px 26px 12px 26px;
+  }
+
+  .ant-collapse-item {
+    &:hover .option-title-icon {
+      display: block;
+    }
+  }
+}
+
 .option-container {
   flex: 1;
 
