--- a/src/pages/Options/components/TabsList/index.scss
+++ b/src/pages/Options/components/TabsList/index.scss
@@ -1,12 +1,10 @@
-.content {
+.tabs-list {
   flex: 1;
   display: flex;
   flex-direction: column;
 
   // 折叠板header区域[expandIconPosition="right"]间距
-  .ant-collapse-icon-position-right
-    > .ant-collapse-item
-    > .ant-collapse-header {
+  .ant-collapse-icon-position-right > .ant-collapse-item > .ant-collapse-header {
     padding: 12px 26px 12px 26px;
   }
 
