--- a/src/pages/Options/components/TabsList/index.scss
+++ b/src/pages/Options/components/TabsList/index.scss
@@ -9,226 +9,8 @@
   }
 
   .ant-collapse-item {
-    &:hover .option-title-icon {
+    &:hover .tabs-panel-title-icon {
       display: block;
-    }
-  }
-}
-
-.option-container {
-  flex: 1;
-
-  .option-title-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 40px;
-    // max-width: 50%;
-    margin-right: 10px;
-    border-radius: 5px;
-    padding-left: 10px;
-    transition: box-shadow 0.6s ease;
-
-    &.checking {
-      box-shadow: 0 0 0 2px var(--theme_primary);
-    }
-
-    &:hover {
-      .del-wrap {
-        opacity: 1;
-        transition: opacity;
-        visibility: visible;
-        transition-delay: 0.36s;
-      }
-    }
-
-    h5 {
-      margin-bottom: 1em;
-    }
-
-    .option-title {
-      font-size: 18px;
-      color: var(--context_primary);
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-    .option-title-input {
-      width: 50%;
-      font-size: 16px;
-    }
-    .del-wrap {
-      width: 28px;
-      height: 28px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      // padding: 3px;
-      border-radius: 6px;
-      margin-left: 10px;
-      visibility: hidden;
-      opacity: 0;
-
-      &:hover {
-        background: var(--background_primary);
-
-        .del-btn {
-          color: var(--red_hover);
-        }
-      }
-      &[data-confirm='true'] {
-        background: var(--red_quarternary);
-      }
-    }
-    .del-btn {
-      font-size: 18px;
-      color: var(--context_primary);
-    }
-
-    .radio-group {
-      label {
-        display: block;
-      }
-      input[type='radio'] {
-        display: inline-block;
-        margin: 3px 5px;
-      }
-    }
-  }
-
-  .ant-collapse-item {
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-
-    .ant-collapse-header {
-      display: flex;
-      align-items: center;
-    }
-  }
-
-  .option-title-icon {
-    display: none;
-    color: var(--context_primary);
-  }
-  .edit-icon {
-    font-size: 16px;
-  }
-
-  .option-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 30px;
-
-    .tabs-item-link {
-      margin-right: 30px;
-      margin-bottom: 20px;
-      border-radius: 10px;
-      overflow: hidden;
-      cursor: pointer;
-      transition: transform 0.3s ease, box-shadow 0.6s ease;
-
-      &:hover {
-        transform: translateY(-8px);
-        background: var(--tabs_card_back_color);
-
-        .del-wrap {
-          opacity: 1;
-          transition: opacity;
-          visibility: visible;
-          transition-delay: 0.36s;
-        }
-      }
-
-      &.checking {
-        box-shadow: 0 0 0 2px var(--theme_primary);
-      }
-    }
-
-    .tabs-item {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 140px;
-      height: 140px;
-      padding: 6px;
-      overflow: hidden;
-
-      .del-wrap {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        // padding: 3px;
-        border-radius: 6px;
-        opacity: 0;
-        visibility: hidden;
-        width: 28px;
-        height: 28px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        &:hover {
-          background: var(--background_primary);
-
-          .del-btn {
-            color: var(--red_hover);
-          }
-        }
-        &[data-confirm='true'] {
-          background: var(--red_quarternary);
-        }
-
-        .del-btn {
-          width: 17px;
-          height: 17px;
-          font-size: 17px;
-          color: var(--context_primary);
-          // background-image: url(../../assets/img/del.png);
-          // background-size: 100% 100%;
-        }
-      }
-      .icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .icon .img {
-        display: block;
-        width: 30px;
-        height: 30px;
-        background-size: 100% 100%;
-        background-image: url(@/assets/img/icon-64.png);
-      }
-
-      .title {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        p {
-          padding-left: 3px;
-          font-size: 14px;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          display: -webkit-box;
-          -webkit-line-clamp: 2;
-          color: var(--context_primary);
-          line-clamp: 2;
-          -webkit-box-orient: vertical;
-        }
-        input {
-          width: 100%;
-          height: 30px;
-          border-radius: 5px;
-          padding: 0 8px;
-          font-size: 14px;
-          box-sizing: border-box;
-        }
-      }
     }
   }
 }
