--- a/src/content-script/styles.scss
+++ b/src/content-script/styles.scss
@@ -66,9 +66,6 @@
     width: 20px;
     height: 20px;
     margin-right: 12px;
-    // background-size: 100% 100%;
-    // background-repeat: no-repeat;
-    // background-image: url(../assets/search.svg);
 
     svg {
       width: 100%;
@@ -136,6 +133,10 @@
     border-radius: 6px;
     cursor: pointer;
 
+    &:hover {
+      background-color: rgba(132, 133, 141, 0.08);
+    }
+
     * {
       pointer-events: none;
     }
@@ -145,9 +146,6 @@
       height: 16px;
       margin-right: 6px;
     }
-  }
-  .command-palette-item:hover {
-    background-color: var(--divider_tertiary);
   }
   .result-content {
     font-size: 16px;
